@@ -1,3 +1,7 @@
+2010-04-14  Stanislas Rolland  <typo3@sjbr.ca>
+
+	* Fixed bug #7259: Use of deprecated function t3lib_div::makeInstanceClassName()
+
 2009-10-20  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Fixed bug: Mishandling of session data. Thanks to Wolo Wolski.
